--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "percentagecalculator",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "node":"10.15.3",
+    "npm":"6.4.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-pro-sidebar": "^0.6.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
